[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/game/pixil-frame-1.png" type="Texture" id=1]
[ext_resource path="res://dialog/memo.gd" type="Script" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]

[node name="memo" type="Control"]
script = ExtResource( 2 )

[node name="icon" type="Button" parent="."]
margin_right = 28.0
margin_bottom = 22.0
icon = ExtResource( 1 )
flat = true

[node name="PetPanel" type="Panel" parent="."]
visible = false
margin_left = -47.0
margin_top = 5.0
margin_right = -1.0
margin_bottom = 18.0
theme = ExtResource( 3 )

[node name="RichTextLabel" type="Label" parent="PetPanel"]
margin_left = 3.0
margin_right = 50.0
margin_bottom = 14.0
theme = ExtResource( 3 )
text = "QAQ~~"

[node name="Timer" type="Timer" parent="."]

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = -21.0
margin_top = 21.0
margin_right = 20.0
margin_bottom = 39.0

[connection signal="pressed" from="icon" to="." method="_on_icon_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
